--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "serve:ssr:angular-movie-app": "node dist/angular-movie-app/server/server.mjs"
   },
   "private": true,
